--- a/GUI/Views/Shared/_Layout.cshtml
+++ b/GUI/Views/Shared/_Layout.cshtml
@@ -94,17 +94,19 @@
         <div class="modal-dialog modal-lg" id='modelContainer-systemModal'>
         </div>
         <!-- /.modal-dialog -->
-        <div>
-            <div class="modal-header">
-                <h4 class="modal-title"></h4>
-            </div>
+        <div class="dialog-systemModal">
+            <div class="content-systemModal">
+                <div class="modal-header">
+                    <h5 class="modal-title"></h5>
+                </div>
 
-            <div class="modal-body">
-            </div>
+                <div class="modal-body">
+                </div>
 
-            <div class="modal-footer">
-                <button type="submit" class="btn btn-success btn-sm" onclick="onDialogYes();"><i class="fa-solid fa-check"></i> Yes</button>
-                <button type="button" class="btn btn-danger btn-sm" onclick="onDialogNo();"><i class="fa-solid fa-xmark"></i> No</button>
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-success btn-sm" onclick="onDialogYes();"><i class="fa-solid fa-check"></i> Yes</button>
+                    <button type="button" class="btn btn-danger btn-sm" onclick="onDialogNo();"><i class="fa-solid fa-xmark"></i> No</button>
+                </div>
             </div>
         </div>
     </div>
