--- a/GUI/wwwroot/css/style.css
+++ b/GUI/wwwroot/css/style.css
@@ -73,6 +73,7 @@
     margin-top: 8px;
 }
 
+/* LOADING */
 #pageLoading {
     position: fixed;
     display: none;
@@ -91,4 +92,20 @@
 #pageLoading .spinner-border {
     width: 3rem;
     height: 3rem;
+}
+
+/* POPUP DELETE */
+#modal-systemModal .dialog-systemModal {
+    width: 100%;
+    height: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#modal-systemModal .content-systemModal {
+    width: fit-content;
+    max-width: 50%;
+    background-color: #fff;
+    border-radius: 8px;
 }
