Feat: Css for aside, CURD Role

--- a/GUI/Views/Category/Shift/PopupDetail.cshtml
+++ b/GUI/Views/Category/Shift/PopupDetail.cshtml
@@ -83,10 +83,12 @@
                                 notyf.success(addSuccess);
                             }
                             refreshGrid();
+                            hideLoading();
                             closePopup();
                         }
                         else {
                             notyf.error(data.Message);
+                            hideLoading();
                         }
                     }
                 });
