--- a/GUI/Views/Shared/_Layout.cshtml
+++ b/GUI/Views/Shared/_Layout.cshtml
@@ -27,6 +27,15 @@
         background-color: #F5F6FA;
         padding: 30px;
     }
+    
+    .body-full {
+        display: flex;
+    }
+    
+    .body-full .body {
+        width: 100%;
+    }
+
 </style>
 
 
@@ -47,12 +56,6 @@
         document.getElementById("pageLoading").style.display = "none";
     }
 
-    function sortTable(value, row, index) {
-        var pageSize = $('#ShiftTable').bootstrapTable('getOptions').pageSize;
-        var pageNumber = $('#ShiftTable').bootstrapTable('getOptions').pageNumber;
-        return (pageNumber - 1) * pageSize + index + 1;
-    }
-
     function confirmDialogYesNo(titleConfirm, deleteConfirmText, deleteData) {
         $('#modal-systemModal').find('.modal-title').text(titleConfirm);
         $('#modal-systemModal').find('.modal-body').text(deleteConfirmText);
@@ -63,17 +66,20 @@
 <body>
 <div class="container-scroller">
     <div class="wrapper">
-        <!-- SideBar -->
-        <aside id="sidebar">
-            @await Component.InvokeAsync("SideBar", null)
-        </aside>
-        <!-- End SideBar -->
+        
         <div class="main">
             <!-- Header -->
             @await Component.InvokeAsync("Header", null)
             <!-- End Header -->
-            <div class="body">
-                @RenderBody()
+            <div class="body-full">
+                <!-- SideBar -->
+                <aside id="sidebar">
+                    @await Component.InvokeAsync("SideBar", null)
+                </aside>
+                <!-- End SideBar -->
+                <div class="body">
+                    @RenderBody()
+                </div>
             </div>
         </div>
     </div>
@@ -115,6 +121,10 @@
         const toggler = document.querySelector('.btn-toggler');
         toggler.addEventListener("click", function () {
             document.querySelector("#sidebar").classList.toggle('collapsed');
+            setTimeout(function () {
+                if ($('table.bootstrap-table').length)
+                    $('table.bootstrap-table').bootstrapTable('destroy').bootstrapTable();
+            }, 300);
         }) 
 
         function onDialogYes() {
