--- a/GUI/wwwroot/css/style.css
+++ b/GUI/wwwroot/css/style.css
@@ -40,6 +40,24 @@
     outline: none;
 }
 
+/* SCROLLBAR */
+/* Toàn bộ thanh cuộn */
+::-webkit-scrollbar {
+    width: 8px; /* Độ rộng của thanh cuộn dọc */
+    height: 8px; /* Độ cao của thanh cuộn ngang */
+}
+
+/* Phần con lăn của thanh cuộn */
+::-webkit-scrollbar-thumb {
+    background-color: #c8c8c8; /* Màu nền của phần con lăn */
+    border-radius: 4px; /* Góc bo tròn của phần con lăn */
+}
+
+/* Phần nền của thanh cuộn */
+::-webkit-scrollbar-track {
+    background-color: #f1f1f1; /* Màu nền của thanh cuộn */
+}
+
 /* BOOTSTRAP TABLE */
 
 .bootstrap-table {
