--- a/GUI/wwwroot/css/style.css
+++ b/GUI/wwwroot/css/style.css
@@ -76,11 +76,13 @@
 
 /* MODAL */
 
-.modal-snhcenter .modal-body input {
+.modal-snhcenter .modal-body input,
+.modal-snhcenter .modal-body select {
     width: 100%;
     border-radius: 4px;
     border: 1px solid #d5d5d5;
     padding: 4px;
+    outline: none;
 }
 
 .modal-snhcenter .modal-body .tickbox {
