--- a/GUI/Views/System/Role/Index.cshtml
+++ b/GUI/Views/System/Role/Index.cshtml
@@ -45,7 +45,7 @@
 </div>
 
 <div class="modal fade" id="modal-default" aria-hidden="true" data-backdrop="static">
-    <div class="modal-dialog modal-lg" id='modelContainer'>
+    <div class="modal-dialog modal-xl" id='modelContainer'>
     </div>
 </div>
 
